--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             margin: 0;
             padding: 0;
             font-family: 'Arial';
-            background-color: gray;
+            background-color: rgb(96, 137, 143);
         }
 
         .wrapper {
@@ -25,18 +25,24 @@
         }
 
         .header {
-            padding: 10px 30px;
+            color: white;
+            padding: 30px;
             margin-bottom: 20px;
+            background-color: rgb(7, 67, 71);
         }
 
         .header .title {
             font-weight: bold;
-            font-size: 2rem;
-            margin-bottom: 10px;
+            font-size: 3rem;
+            margin-bottom: 20px;
         }
 
         .header .description {
-            font-size: 1.5rem;
+            margin-bottom: 10px;
+            font-size: 1.3rem;
+        }
+        a {
+            color: white;
         }
 
         .control {
@@ -91,10 +97,10 @@
     <div class="wrapper">
 
         <div class="header">
-            <div class="title">Polydiv</div>
-            <div class="description">Add random 'clip-path' rules to childrens of given element.</div>
+            <div class="title"><a href="https://github.com/radiium/polydiv#polydiv">Polydiv</a></div>
+            <div class="description">Clipping html element in random polygon with the css 'clip-path' rule.</div>
             <div class="description">
-                    <a href="https://github.com/radiium/polydiv#polydiv">Documentation</a>
+                <a href="https://github.com/radiium/polydiv#polydiv">Documentation</a>
             </div>
         </div>
 
