--- a/index.html
+++ b/index.html
@@ -92,30 +92,38 @@
         }
     </style>
 
+    <!-- Github banner -->
     <a href="https://github.com/radiium/polydiv"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png" alt="Fork me on GitHub"></a>
+
 
     <div class="wrapper">
 
+        <!-- Header -->
         <div class="header">
-            <div class="title"><a href="https://github.com/radiium/polydiv#polydiv">Polydiv</a></div>
+            <div class="title"><a href="https://github.com/radiium/polydiv">Polydiv</a></div>
             <div class="description">Clipping html element in random polygon with the css 'clip-path' rule.</div>
-            <div class="description">
-                <a href="https://github.com/radiium/polydiv#polydiv">Documentation</a>
-            </div>
+            <div class="description"><a href="https://github.com/radiium/polydiv#polydiv">Documentation</a></div>
         </div>
 
+        <!-- Control buttons demo -->
         <div class="control">
             <button onclick="randomize()">Random clip</button>
             <button onclick="remove()">Remove clip</button>
         </div>
 
+        <!-- Items -->
         <div class="polydivContainer"></div>
-
     </div>
 
+    <!-- Import polydiv -->
     <script type="text/javascript" src="./polydiv.min.js"></script>
+
+    <!-- Demo scrpt -->
     <script type="text/javascript">
 
+        var callback = function() { console.log('Done'); }
+
+        // Generate and add items to the DOM
         function appendPolydivItems(n) {
             var container = document.getElementsByClassName('polydivContainer')[0];
             for (var i = 0; i < n + 1; i++) {
@@ -131,19 +139,11 @@
 
             }
         }
-
         appendPolydivItems(12)
 
 
         // Create and init polydiv instance
         var polys = new Polydiv({ itemClass: 'poylidivItem'});
-        console.log('polydiv instance:');
-        console.log(polys);
-
-
-        var callback = function() {
-            console.log('Done');
-        }
 
         // Clip items
         var randomize = function() {
